# Wower

./: LICENSE  README.md  pyproject.toml
HelloWorld/: AAuc.lua  HelloWorld.lua  HelloWorld.toc  core.lua
HelloWorld/modules/: craft.lua  war.lua
HelloWorld/modules/craft/: auction.lua  crafting.lua  mailbox.lua
src/: macros.txt
src/HelloWorld/: HelloWorld.lua  HelloWorld.toc  core.lua
src/HelloWorld/modules/: craft.lua  keystroke.lua  war.lua
src/HelloWorld/modules/craft/: auction.lua  crafting.lua  mailbox.lua
src/HelloWorld/modules/war/: deathknight.lua  druid.lua  hunter.lua  rogue.lua  warrior.lua
src/Wower/: config.py  hotkeys.py  hotkeys_2.py  main.py  screen_scan.py  spells.py  user_actions.py
src/Wower/HelloWorld/: HelloWorld.lua  HelloWorld.toc  core.lua  lua_config.txt
src/Wower/HelloWorld/modules/: war.lua
src/Wower/HelloWorld/modules/craft/: auction.lua  crafting.lua
src/Wower/HelloWorld/modules/war/: hunter.lua  rogue.lua
